# camouflage

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  camouflage  go.mod  go.sum
.github/: ISSUE-1-CORE-ultrasonic-signal-generation.md  ISSUE-2-FEAT-speaker-jammer-mode.md  ISSUE-3-FEAT-on-system-jammer-mode.md  ISSUE-4-FEAT-cross-platform-support.md  ISSUE-5-CI-setup-github-actions.md
.github/workflows/: claude-code-review.yml  claude.yml  e2e.yml  release.yml  test.yml
camouflage/: Cargo.toml
camouflage-core/: Cargo.toml
camouflage-core/src/: daemon.rs  jammer.rs  lib.rs  signal.rs
camouflage-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
camouflage-tests/: Cargo.toml
camouflage-tests/benches/: performance.rs
camouflage-tests/src/: deepgram.rs  lib.rs  openai_tts.rs  test_utils.rs  whisper.rs
camouflage-tests/tests/: e2e_deepgram.rs  e2e_whisper.rs
camouflage/src/: main.rs
cmd/camouflage/: installer_macos.go  installer_macos_test.go  main.go  main_test.go
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USAGE.md
internal/ultrasonic/: generator.go  generator_test.go
spikes/macos-audio/: go.mod  main.go
